# MystBin

./: .dockerignore  .env-template  .env.template  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  README.rst  _migrating.py  config-template.json  config.template.toml  docker-compose.yaml  launcher.py  migrating.py  migration.sql  pyproject.toml  redis.conf  requirements.txt  schema.sql
.github/: CONTRIBUTING.md  FUNDING.yml
.github/workflows/: analysis.yml  build-echo.yaml  build_and_push.yaml  coverage_and_lint.yml  deploy.yaml  lint.yml  signoff.yaml
core/: __init__.py  config.py  database.py  models.py  scanners.py  server.py  utils.py
database/: schema.sql
db-backup/: backup.sh
echo/: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yaml  example.config.json  openapi.json
echo/schema/: 00-init.sh  01-base.sh
echo/src/: config.rs  cors.rs  main.rs  result.rs  scanners.rs  utils.rs
echo/src/database/: background_task.rs  mod.rs  pastes.rs  security.rs
echo/src/models/: meta.rs  mod.rs  pastes.rs  security.rs
echo/src/routes/: docs.rs  health.rs  meta.rs  mod.rs  pastes.rs  security.rs
echo/src/scanners/: discord.rs  generic.rs  mod.rs  reporter.rs
mystbin/: config-template.toml
mystbin/backend/: Dockerfile  app.py  dev-requirements.txt  fastapi_models.py  main.py  mystbin_models.py  requirements.txt
mystbin/backend/daemon/: tasks.py
mystbin/backend/models/: errors.py  payloads.py  responses.py
mystbin/backend/routers/: admin.py  apps.py  doc.py  pastes.py  safety.py  user.py
mystbin/backend/tests/: common.py  test_admins.py
mystbin/backend/utils/: cli.py  datapackage.py  db.py  email.py  embed.py  gravatar.py  openapi.py  ratelimits.py  responses.py  router.py  tokens.py  version.py  webhooks.py  words.txt
mystbin/caddy/: .env-template  Caddyfile
mystbin/database/: .env-template  docker-compose.yaml  migrate_v4.sql  schema.sql
mystbin/fallback/: fallback.py  maintenance.html  service_failure.html
mystbin/frontend/: .env.local.example  .gitignore  Dockerfile  package.json
mystbin/frontend/app/: globals.css  layout.js  page.js  providers.js
mystbin/frontend/app/[id]/: page.js
mystbin/frontend/app/components/: codeBlock.js  editor.js  footer.js  topNav.js
mystbin/frontend/app/privacy/: page.js
mystbin/frontend/app/svgs/: closeSVG.js  copySVG.js  discordLogoSVG.js  doneSVG.js  downloadSVG.js  editSVG.js  evSVG.js  githubLogoSVG.js  loader.js  lockSVG.js  logoSmallSVG.js  moonSVG.js  newSVG.js  plusSVG.js  shareSVG.js  sunSVG.js  themeSVG.js
mystbin/frontend/components/: Base.tsx  EditorTabs.tsx  ExpiryModal.tsx  LoginModal.tsx  MonacoEditor.tsx  NavBar.tsx  NewTabButton.tsx  OptsBar.tsx  PasswordInput.tsx  PasswordModal.tsx  PrettySeconds.tsx  SetPasswordModal.tsx  Sleeper.tsx  Tab.tsx  TipModal.tsx  optsBar.tsx
mystbin/frontend/dispatchers/: PasteDispatcher.tsx
mystbin/frontend/icons/: DiscordColour.tsx  GoogleIcon.tsx  LoginIcon.tsx  PatreonFirey.tsx
mystbin/frontend/pages/: [pid].tsx  _app.tsx  _document.jsx  dashboard.tsx  discord_auth.tsx  github_auth.tsx  google_auth.tsx  index.tsx  success.tsx  test.tsx
mystbin/frontend/prism/: prism.css  prism.js
mystbin/frontend/public/: LogoMain.tsx  LogoMinimalMain.tsx
mystbin/frontend/stores/: PasteStore.tsx  languageStore.tsx
mystbin/frontend/styles/: Base.module.css  Dash.module.css  EditorTabs.module.css  Home.module.css  Login.module.css  Nav.module.css  NewTabButton.module.css  OptsBar.module.css  PasswordInput.module.css  PasswordModal.module.css  Success.module.css  Tab.module.css  TipModal.module.css  globals.css
mystbin/grafana/: Dockerfile  grafana.ini
mystbin/grafana/provisioning/dashboards/: dashboard.yml
mystbin/grafana/provisioning/datasources/: datasource.yml
mystbin/nginx/: .env-template  Dockerfile  backend.conf  docker-entrypoint.sh  frontend.conf  nginx.conf  ssl.sh
mystbin/nginx/sites-enabled/: api.conf  frontend.conf
mystbin/prometheus/: prometheus.yml
mystbin/rest/: Dockerfile  config-template.toml  main.py  models.py  pyproject.toml  requirements.txt
mystbin/rest/models/: payloads.py  responses.py
mystbin/rest/routers/: admin.py  apps.py  pastes.py  user.py
mystbin/rest/tests/: common.py  test_admins.py
mystbin/rest/utils/: db.py  ratelimits.py  tokens.py
mystbin/systemd/: backend_with_venv.service  backend_without_venv.service  fallback.service  frontend.service
src/core/: __init__.py  config.py  database.py  errors.py  models.py  scanners.py  server.py  utils.py
src/types_/: __init__.py  config.py  github.py  scanner.py
src/views/: __init__.py  api.py  docs.py  htmx.py
src/web/: docs.html  password.html  paste.html
src/web/static/scripts/: hidecopy.js  lineHighlights.js  themes.js
src/web/static/styles/: highlights.css
types_/: config.py  github.py  scanner.py
views/: __init__.py  api.py  docs.py  htmx.py
web/: docs.html  index.html  maint.html  password.html  paste.html
web/static/scripts/: dragDrop.js  files.js  hidecopy.js  highlights.js  highlightsHTMX.js  initialTheme.js  shortcuts.js  themes.js  utils.js
web/static/styles/: global.css  highlights.css  pasteHeaders.css
