[project]
name = "mystbin"
description = "A paste bin designed with simplicity and beauty in mind."
authors = [
    { name = "EvieePy", email = "29671945+evieepy@users.noreply.github.com" },
    { name = "Alex Nørgaard", email = "umbra@abstractumbra.dev" },
]
dependencies = [
    "aiohttp>=3.10,<4.0",
    "aiohttp[speedups]>=3.10,<4.0; extra == \"speed\"",
    "asyncpg>=0.29.0",
    "bleach>=6.1.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.1",
    "starlette-plus",
    "uvicorn>=0.29.0",
]
requires-python = "<4.0,>=3.11"
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
keywords = ["mystbin", "paste"]
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Typing :: Typed",
]
dynamic = ["version"]

[dependency-groups]
dev = ["asyncpg-stubs"]


[tool.uv]
package = false

[[tool.uv.index]]
name = "umbra"
url = "https://about.abstractumbra.dev/pip/"
explicit = true

[tool.uv.sources]
starlette-plus = { git = "https://github.com/PythonistaGuild/StarlettePlus.git", rev = "da3d9a4" }
asyncpg = { index = "umbra" }

[tool.ruff]
line-length = 125
indent-width = 4
exclude = ["venv", ".venv"]

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "ASYNC230", # our files are small and not worth the anyio dependency
    "D105",     # not required most of the time
    "D101",     # this is not a public package that needs documentation
    "D102",     # this is not a public package that needs documentation
    "D103",     # this is not a public package that needs documentation
    "D401",     # imperative mood makes sense in most cases but not all
    "PLR2004",  # I simply disagree with this one
    "COM812",   # required for format
]
unfixable = [
    "E501", # line length handled in other ways by ruff format
    "ERA",  # Don't delete commented out code
]
exclude = ["docs/conf.py"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
split-on-trailing-comma = true
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
parametrize-names-type = "csv"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.pyright]
exclude = ["venv", ".venv"]
useLibraryCodeForTypes = true
typeCheckingMode = "strict"
pythonVersion = "3.11"
