[package]
name = "echo"
version = "1.0.0"
publish = false
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
figment = { version = "0.10.19", features = ["json"] }
rand = "0.8.5"
reqwest = { version = "0.12.8", default-features = false, features = ["json", "native-tls-alpn", "native-tls-vendored"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket-validation = "0.2.0"
rocket_db_pools = { version = "0.2.0", features = ["sqlx_postgres"] }
serde = "1.0.210"
sqlx = { version = "0.7.4", features = ["chrono"] }
tokio = "1.40.0"
validator = "0.16.1"

[profile.release]
lto = true
strip = true
codegen-units = 1
